Improves project folder structure and adds testing configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-venv
+# byte-compiled
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Environments
+.venv
+venv/
