--- a/inscripcion/requirements.txt
+++ b/inscripcion/requirements.txt
@@ -10,6 +10,7 @@ Mako==1.0.7
 MarkupSafe==1.0
 python-dateutil==2.7.2
 python-editor==1.0.3
+PyYAML==3.12
 six==1.11.0
 SQLAlchemy==1.2.7
 Werkzeug==0.14.1
