Fixes postgres connection library

--- a/inscripcion/Dockerfile
+++ b/inscripcion/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.6-alpine
 ENV FLASK_APP inscripcion.py
 ENV FLASK_CONFIG docker
 
-RUN apk add py-psycopg2 --update && \
+RUN apk --no-cache add build-base postgresql-dev && \
     adduser -D inscripcion
 
 USER inscripcion
@@ -12,7 +12,8 @@ WORKDIR /home/inscripcion
 
 COPY requirements.txt requirements.txt
 RUN python -m venv venv
-RUN venv/bin/pip install -r requirements.txt
+RUN venv/bin/pip install -r requirements.txt && \
+    venv/bin/pip install psycopg2 psycopg2-binary
 
 COPY app app
 COPY domain domain
