--- a/inscripcion/requirements.txt
+++ b/inscripcion/requirements.txt
@@ -1,7 +1,9 @@
 alembic==0.9.9
+blinker==1.4
 click==6.7
 Flask==0.12.2
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
 Flask-SSLify==0.1.5
