Revert "Install heroku package with sudo"
This reverts commit 3f31c3c2be4d11385359dd9fd0b99bd40b9c8ed0.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install: make
 
 before_script:
   - sudo apt-get --yes install snapd
-  - sudo snap install --edge heroku
+  - snap install --edge heroku
   - make install_dependencies
   - make setup_credentials
 
