--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ before_script:
 
 script:
   - make test
+  - make lint
   - make build_image
   - make deploy_to_qa
-  - make deploy_to_prod BUILD_DEBUG=no
+  - make deploy_to_prod BUILD_DEBUG=yes
 
 after_script:
   - make clean_credentials
