--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
   - make build_image
   - make deploy_to_qa
   - make deploy_to_prod BUILD_DEBUG=no
+  - echo $PROJECT
 
 after_script:
   - make clean_credentials
