--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   - make lint
   - make build_image
   - make deploy_to_qa
-  - make deploy_to_prod BUILD_DEBUG=no
+  - make deploy_to_prod BUILD_DEBUG=yes
   - echo $PROJECT
 
 after_script:
