--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,12 @@ before_script:
   - make setup_credentials
 
 script:
-  - make test
-  - make lint
-  - make build_image
-  - make deploy_to_qa
-  - make deploy_to_prod BUILD_DEBUG=yes
-  - echo $PROJECT
+  - echo $TRAVIS_BUILD_DIR
+  #- make test
+  #- make lint
+  #- make build_image
+  #- make deploy_to_qa
+  #- make deploy_to_prod BUILD_DEBUG=yes
 
 after_script:
   - make clean_credentials
